--- a/cpp_04/ex01/Makefile
+++ b/cpp_04/ex01/Makefile
@@ -1,6 +1,6 @@
 NAME = animal
 
-src = Animal.cpp Dog.cpp Cat.cpp main.cpp
+src = Animal.cpp Dog.cpp Cat.cpp Brain.cpp main.cpp
 
 CC = c++
 
@@ -13,7 +13,7 @@ all: $(NAME)
 $(NAME): $(obj)
 	$(CC)  $(flags) $(obj) -o $(NAME)
 
-%.o: %.cpp Animal.hpp Dog.hpp Cat.hpp
+%.o: %.cpp Animal.hpp Dog.hpp Cat.hpp Brain.hpp
 	$(CC) $(flags) -c $< -o $@
 
 clean:
